initial/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from /home/ntr18/Documents/initial/src/main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'readInt()'", "'printInt'", "'writeFloat'", 
                     "'readFloat()'", "'printBoolean'", "'readString()'", 
                     "'printString'", "'super'", "'preventDefault()'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'auto'", "'break'", 
                     "'boolean'", "'do'", "'else'", "'false'", "'float'", 
                     "'for'", "'function'", "'if'", "'integer'", "'return'", 
                     "'string'", "'true'", "'void'", "'while'", "'out'", 
                     "'continue'", "'of'", "'inherit'", "'array'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'::'", 
                     "'('", "')'", "'['", "']'", "','", "':'", "';'", "'{'", 
                     "'}'", "'='", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "BooleanLiteral", "IntegerLiteral", 
                      "FloatLiteral", "StringLiteral", "AUTO", "BREAK", 
                      "BOOLEAN", "DO", "ELSE", "FALSE", "FLOAT", "FOR", 
                      "FUNCTION", "IF", "INTEGER", "RETURN", "STRING", "TRUE", 
                      "VOID", "WHILE", "OUT", "CONTINUE", "OF", "INHERIT", 
                      "ARRAY", "Plus", "Minus", "Multiple", "Division", 
                      "Remain", "Negation", "And", "Or", "Equal", "NotEqual", 
                      "Less", "LessEqual", "Greater", "GreaterEqual", "CONCATENATE", 
                      "LP", "RP", "LSB", "RSB", "COMMA", "COLON", "SEMICOLON", 
                      "LCB", "RCB", "ASSIGN", "DOT", "Identifier", "WS", 
                      "BlockComment", "LineComment", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_function = 2
    RULE_varDecl = 3
    RULE_temp1 = 4
    RULE_temp2 = 5
    RULE_temp3 = 6
    RULE_temp4 = 7
    RULE_temp5 = 8
    RULE_functionPrototype = 9
    RULE_dimensions = 10
    RULE_listIndex = 11
    RULE_identifierList = 12
    RULE_initialization = 13
    RULE_paramDecl = 14
    RULE_listPara = 15
    RULE_paradeclList = 16
    RULE_inherSubpart = 17
    RULE_functionBody = 18
    RULE_datatype = 19
    RULE_expression = 20
    RULE_numberExpression = 21
    RULE_floatExpression = 22
    RULE_floatRelationalExpression = 23
    RULE_floatLogicalExpression = 24
    RULE_floatAdditiveExpression = 25
    RULE_floatMultiplicativeExpression = 26
    RULE_intExpression = 27
    RULE_intRelationalExpression = 28
    RULE_intLogicalExpression = 29
    RULE_intAdditiveExpression = 30
    RULE_intMultiplicativeExpression = 31
    RULE_relationalExpression = 32
    RULE_logicalExpression = 33
    RULE_additiveExpression = 34
    RULE_multiplicativeExpression = 35
    RULE_negationSingExpression = 36
    RULE_primaryExpression = 37
    RULE_intNegationSignExpression = 38
    RULE_intPrimaryExpression = 39
    RULE_floatNegationSignExpression = 40
    RULE_floatPrimaryExpression = 41
    RULE_arrayElement = 42
    RULE_functionCall = 43
    RULE_constant = 44
    RULE_stringExpression = 45
    RULE_stringPrimaryExpression = 46
    RULE_boolExpression = 47
    RULE_negationExpression = 48
    RULE_boolPrimaryExpression = 49
    RULE_statement = 50
    RULE_assignmentStatement = 51
    RULE_lhs = 52
    RULE_selectionStatement = 53
    RULE_iterationStatement = 54
    RULE_forCondition = 55
    RULE_forDeclaration = 56
    RULE_conditionExpression = 57
    RULE_updateExpression = 58
    RULE_blockStatement = 59
    RULE_callStatement = 60
    RULE_argumentList = 61
    RULE_jumpStatement = 62
    RULE_arrayLiteral = 63
    RULE_arrayIndex = 64
    RULE_elements = 65
    RULE_element = 66
    RULE_sepcialFunction = 67
    RULE_intArgument = 68
    RULE_floatArgument = 69
    RULE_stringArgument = 70
    RULE_boolArgument = 71
    RULE_listexpr = 72

    ruleNames =  [ "program", "declaration", "function", "varDecl", "temp1", 
                   "temp2", "temp3", "temp4", "temp5", "functionPrototype", 
                   "dimensions", "listIndex", "identifierList", "initialization", 
                   "paramDecl", "listPara", "paradeclList", "inherSubpart", 
                   "functionBody", "datatype", "expression", "numberExpression", 
                   "floatExpression", "floatRelationalExpression", "floatLogicalExpression", 
                   "floatAdditiveExpression", "floatMultiplicativeExpression", 
                   "intExpression", "intRelationalExpression", "intLogicalExpression", 
                   "intAdditiveExpression", "intMultiplicativeExpression", 
                   "relationalExpression", "logicalExpression", "additiveExpression", 
                   "multiplicativeExpression", "negationSingExpression", 
                   "primaryExpression", "intNegationSignExpression", "intPrimaryExpression", 
                   "floatNegationSignExpression", "floatPrimaryExpression", 
                   "arrayElement", "functionCall", "constant", "stringExpression", 
                   "stringPrimaryExpression", "boolExpression", "negationExpression", 
                   "boolPrimaryExpression", "statement", "assignmentStatement", 
                   "lhs", "selectionStatement", "iterationStatement", "forCondition", 
                   "forDeclaration", "conditionExpression", "updateExpression", 
                   "blockStatement", "callStatement", "argumentList", "jumpStatement", 
                   "arrayLiteral", "arrayIndex", "elements", "element", 
                   "sepcialFunction", "intArgument", "floatArgument", "stringArgument", 
                   "boolArgument", "listexpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    BooleanLiteral=10
    IntegerLiteral=11
    FloatLiteral=12
    StringLiteral=13
    AUTO=14
    BREAK=15
    BOOLEAN=16
    DO=17
    ELSE=18
    FALSE=19
    FLOAT=20
    FOR=21
    FUNCTION=22
    IF=23
    INTEGER=24
    RETURN=25
    STRING=26
    TRUE=27
    VOID=28
    WHILE=29
    OUT=30
    CONTINUE=31
    OF=32
    INHERIT=33
    ARRAY=34
    Plus=35
    Minus=36
    Multiple=37
    Division=38
    Remain=39
    Negation=40
    And=41
    Or=42
    Equal=43
    NotEqual=44
    Less=45
    LessEqual=46
    Greater=47
    GreaterEqual=48
    CONCATENATE=49
    LP=50
    RP=51
    LSB=52
    RSB=53
    COMMA=54
    COLON=55
    SEMICOLON=56
    LCB=57
    RCB=58
    ASSIGN=59
    DOT=60
    Identifier=61
    WS=62
    BlockComment=63
    LineComment=64
    ERROR_CHAR=65
    UNCLOSE_STRING=66
    ILLEGAL_ESCAPE=67

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DeclarationContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DeclarationContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.FunctionContext)
            else:
                return self.getTypedRuleContext(MT22Parser.FunctionContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 148
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 146
                    self.declaration()
                    pass

                elif la_ == 2:
                    self.state = 147
                    self.function()
                    pass


                self.state = 150 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.Identifier):
                    break

            self.state = 152
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(MT22Parser.VarDeclContext,0)


        def SEMICOLON(self):
            return self.getToken(MT22Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_declaration




    def declaration(self):

        localctx = MT22Parser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.varDecl()
            self.state = 155
            self.match(MT22Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionPrototype(self):
            return self.getTypedRuleContext(MT22Parser.FunctionPrototypeContext,0)


        def functionBody(self):
            return self.getTypedRuleContext(MT22Parser.FunctionBodyContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_function




    def function(self):

        localctx = MT22Parser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.functionPrototype()
            self.state = 158
            self.functionBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierList(self):
            return self.getTypedRuleContext(MT22Parser.IdentifierListContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def datatype(self):
            return self.getTypedRuleContext(MT22Parser.DatatypeContext,0)


        def Identifier(self):
            return self.getToken(MT22Parser.Identifier, 0)

        def temp1(self):
            return self.getTypedRuleContext(MT22Parser.Temp1Context,0)


        def intExpression(self):
            return self.getTypedRuleContext(MT22Parser.IntExpressionContext,0)


        def temp2(self):
            return self.getTypedRuleContext(MT22Parser.Temp2Context,0)


        def stringExpression(self):
            return self.getTypedRuleContext(MT22Parser.StringExpressionContext,0)


        def temp3(self):
            return self.getTypedRuleContext(MT22Parser.Temp3Context,0)


        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def temp4(self):
            return self.getTypedRuleContext(MT22Parser.Temp4Context,0)


        def boolExpression(self):
            return self.getTypedRuleContext(MT22Parser.BoolExpressionContext,0)


        def temp5(self):
            return self.getTypedRuleContext(MT22Parser.Temp5Context,0)


        def floatExpression(self):
            return self.getTypedRuleContext(MT22Parser.FloatExpressionContext,0)


        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_varDecl




    def varDecl(self):

        localctx = MT22Parser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDecl)
        try:
            self.state = 191
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 160
                self.identifierList()
                self.state = 161
                self.match(MT22Parser.COLON)
                self.state = 162
                self.datatype()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.match(MT22Parser.Identifier)
                self.state = 165
                self.temp1()
                self.state = 166
                self.intExpression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 168
                self.match(MT22Parser.Identifier)
                self.state = 169
                self.temp2()
                self.state = 170
                self.stringExpression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 172
                self.match(MT22Parser.Identifier)
                self.state = 173
                self.temp3()
                self.state = 174
                self.expression()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 176
                self.match(MT22Parser.Identifier)
                self.state = 177
                self.temp4()
                self.state = 178
                self.boolExpression(0)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 180
                self.match(MT22Parser.Identifier)
                self.state = 181
                self.temp5()
                self.state = 182
                self.floatExpression()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 184
                self.identifierList()
                self.state = 185
                self.match(MT22Parser.COLON)
                self.state = 186
                self.match(MT22Parser.ARRAY)
                self.state = 187
                self.dimensions()
                self.state = 188
                self.match(MT22Parser.OF)
                self.state = 189
                self.datatype()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Temp1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def Identifier(self):
            return self.getToken(MT22Parser.Identifier, 0)

        def temp1(self):
            return self.getTypedRuleContext(MT22Parser.Temp1Context,0)


        def intExpression(self):
            return self.getTypedRuleContext(MT22Parser.IntExpressionContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_temp1




    def temp1(self):

        localctx = MT22Parser.Temp1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_temp1)
        try:
            self.state = 202
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 193
                self.match(MT22Parser.COMMA)
                self.state = 194
                self.match(MT22Parser.Identifier)
                self.state = 195
                self.temp1()
                self.state = 196
                self.intExpression()
                self.state = 197
                self.match(MT22Parser.COMMA)
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 199
                self.match(MT22Parser.COLON)
                self.state = 200
                self.match(MT22Parser.INTEGER)
                self.state = 201
                self.match(MT22Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Temp2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def Identifier(self):
            return self.getToken(MT22Parser.Identifier, 0)

        def temp2(self):
            return self.getTypedRuleContext(MT22Parser.Temp2Context,0)


        def stringExpression(self):
            return self.getTypedRuleContext(MT22Parser.StringExpressionContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_temp2




    def temp2(self):

        localctx = MT22Parser.Temp2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_temp2)
        try:
            self.state = 213
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 204
                self.match(MT22Parser.COMMA)
                self.state = 205
                self.match(MT22Parser.Identifier)
                self.state = 206
                self.temp2()
                self.state = 207
                self.stringExpression()
                self.state = 208
                self.match(MT22Parser.COMMA)
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 210
                self.match(MT22Parser.COLON)
                self.state = 211
                self.match(MT22Parser.STRING)
                self.state = 212
                self.match(MT22Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Temp3Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def Identifier(self):
            return self.getToken(MT22Parser.Identifier, 0)

        def temp3(self):
            return self.getTypedRuleContext(MT22Parser.Temp3Context,0)


        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_temp3




    def temp3(self):

        localctx = MT22Parser.Temp3Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_temp3)
        try:
            self.state = 224
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 215
                self.match(MT22Parser.COMMA)
                self.state = 216
                self.match(MT22Parser.Identifier)
                self.state = 217
                self.temp3()
                self.state = 218
                self.expression()
                self.state = 219
                self.match(MT22Parser.COMMA)
                pass
            elif token in [MT22Parser.COLON]:
                self.enterOuterAlt(localctx, 2)
                self.state = 221
                self.match(MT22Parser.COLON)
                self.state = 222
                self.match(MT22Parser.AUTO)
                self.state = 223
                self.match(MT22Parser.ASSIGN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Temp4Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
